--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 body {
-	@apply bg-white text-neutral-900 dark:bg-neutral-900 dark:text-neutral-200 font-mono font-light;
+	@apply bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-200 font-mono font-light;
 }
 
 .no-pre-margin pre {
