--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 body {
-	@apply bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-200 font-sansserif font-light;
+	@apply bg-neutral-100 text-neutral-900 dark:bg-black dark:text-neutral-200 font-sansserif font-light;
 }
 
 p {
