--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,17 +1,9 @@
 body {
-	@apply bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-200 font-sansserif font-light;
-	-webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
+	@apply bg-black text-neutral-200 font-sansserif font-light subpixel-antialiased;
 }
 
 ::selection {
 	background: #363636;
-}
-
-@media (prefers-color-scheme: light) {
-	::selection {
-		background: #e5e5e5;
-	}
 }
 
 p {
@@ -54,4 +46,50 @@ figcaption {
 
 h1 {
 	@apply font-system;
+}
+
+@keyframes gradient-border {
+	0% {
+		border-image-source: linear-gradient(
+			45deg,
+			rgba(209, 209, 209, 1),
+			rgba(153, 153, 153, 1),
+			rgba(77, 77, 77, 1),
+			rgba(0, 0, 0, 1)
+		);
+	}
+	50% {
+		border-image-source: linear-gradient(
+			45deg,
+			rgba(153, 153, 153, 1),
+			rgba(77, 77, 77, 1),
+			rgba(0, 0, 0, 1),
+			rgba(209, 209, 209, 1)
+		);
+	}
+	100% {
+		border-image-source: linear-gradient(
+			45deg,
+			rgba(77, 77, 77, 1),
+			rgba(0, 0, 0, 1),
+			rgba(209, 209, 209, 1),
+			rgba(153, 153, 153, 1)
+		);
+	}
+}
+
+@media (min-width: 768px) {
+	.border-gradient-animated {
+		border-style: solid;
+		border-width: 1px;
+		border-image: linear-gradient(
+				45deg,
+				rgba(209, 209, 209, 1),
+				rgba(153, 153, 153, 1),
+				rgba(77, 77, 77, 1),
+				rgba(0, 0, 0, 1)
+			)
+			1;
+		animation: gradient-border 8s ease-in-out infinite alternate forwards;
+	}
 }
