--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,7 +2,7 @@ body {
 	@apply bg-black text-neutral-200 font-sansserif font-light subpixel-antialiased;
 }
 
-::root {
+:root {
 	color-scheme: only dark;
 }
 
