--- a/app/codeblocks.css
+++ b/app/codeblocks.css
@@ -33,7 +33,7 @@
 	 background: hsl(0, 0%, 6%);
 	 color: hsl(220, 14%, 71%);
 	 text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-	 font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace;
+	 font-family: "Geist Mono", "Fira Code", Menlo, Consolas, "DejaVu Sans Mono", monospace;
 	 direction: ltr;
 	 text-align: left;
 	 white-space: pre;
