--- a/app/app.css
+++ b/app/app.css
@@ -1,16 +1,37 @@
 @import "tailwindcss" source(".");
 @plugin "@tailwindcss/typography";
 
+/* Geist Sans */
+@font-face {
+  font-family: 'Geist Sans';
+  src: url('/fonts/Geist/webfonts/Geist[wght].woff2') format('woff2');
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+}
+
+/* Geist Mono */
+@font-face {
+  font-family: 'Geist Mono';
+  src: url('/fonts/GeistMono/webfonts/GeistMono[wght].woff2') format('woff2');
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+}
+
 @theme {
-  --font-system: "system-ui", "-apple-system", "BlinkMacSystemFont", "Segoe UI",
+  --font-sans: "Geist Sans", "system-ui", "-apple-system", "BlinkMacSystemFont",
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", "Arial", "sans-serif";
+  --font-system: "Geist Sans", "system-ui", "-apple-system", "BlinkMacSystemFont", "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", "Arial", "sans-serif";
-  --font-mono: "var(--font-geist-mono)", "ui-monospace", "Menlo", "Monaco",
+  --font-mono: "Geist Mono", "ui-monospace", "Menlo", "Monaco",
     "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono",
     "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono",
     "Courier New", "monospace";
 
-  --font-sansserif: "var(--font-geist-sans)", "system-ui", "-apple-system",
+  --font-sansserif: "Geist Sans", "system-ui", "-apple-system",
     "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", "Arial", "sans-serif";
 }
